# nlp-classification

./: .gitignore  pyproject.toml
api/: main.py  utils.py
notebooks/amazon_reviews/: distilbert.ipynb  distilbert_viz.html  eda.ipynb  logreg.ipynb
notebooks/fake_news/: eda.ipynb  logreg.ipynb
src/data/: dataset.py  torch_datasets.py
src/models/: ml_classifier.py  review_baseline.py
src/models/components/: stemmer.py
src/review/: utils.py
src/review/data/: dataset.py  processing.py  torch_datasets.py
src/review/models/: ml_classifier.py
