[tool.poetry]
name = "nlp-classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
torch = "^2.0.0"
numpy = "^1.24.2"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
xgboost = "^1.7.5"
eli5 = "^0.13.0"
transformers = "^4.28.1"
evaluate = "^0.4.0"
transformers-interpret = "^0.10.0"

[tool.poetry.group.api.dependencies]
fastapi = "^0.95.0"
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.2.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
flake8-pyproject = "^1.2.2"
nbqa = "^1.6.4"
pycln = "^2.1.3"
ipykernel = "^6.22.0"
wandb = "^0.14.0"
datasets = "^2.11.0"
seaborn = "^0.12.2"
wordcloud = "^1.8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
exclude = ['.git', '__pycache__', '.venv']
max_line_length = 89
max_doc_length = 89
max-complexity = 18


[tool.black]
line-length = 89
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip = [".git", "__pycache__", ".venv"]


[tool.mypy]
files = "src/**/*.py"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["torch", "pandas", "datasets", "sklearn", "nltk"]
ignore_missing_imports = true